header style modify

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -13,7 +13,7 @@ body {
   .el-button {
     color: @themeColor;
     border: 1px solid @themeLighterColor;
-    background: none;
+    background: #fff;
     border-radius: 4px;  
   }
   
