路由完善，页面权限，跳转

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -5,10 +5,13 @@ body {
     margin: 0;
   }
   
-  html, body, #app {
+  html, body, #share {
     height: 100%;
   }
-  
+  a {
+    text-decoration: none;
+    color: #333;
+  }
   
   .el-button {
     color: @themeColor;
