css style modify

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,4 +1,5 @@
-@themeColor: rgb(0, 153, 0);
-@themeLighterColor: rgba(0, 153, 51, 0.6);
-@bgColor: #149739;
+@themeColor:#283542;
+@themeLighterColor:#283542;
+// @bgColor: #149739;
+@bgColor:#171f26;
 @textLighterColor: #999;
