--- a/src/pages/My/template.less
+++ b/src/pages/My/template.less
@@ -1,14 +1,15 @@
 @import "../../assets/base.less";
 
-#my,#user {
- 
+#my,
+#user {
+
   .user-info {
     display: grid;
     grid: auto auto / 80px 1fr;
-    
+
     margin-top: 30px;
     padding-bottom: 20px;
-    border-bottom: 1px solid #ebebeb;
+    border-bottom: 2px solid #ebebeb;
 
     .avatar {
       grid-column: 1;
@@ -27,7 +28,7 @@
 
   .item {
     display: grid;
-    grid: auto  auto auto / 80px 1fr;
+    grid: auto auto auto / 80px 1fr;
     margin: 20px 0;
 
     .date {
@@ -64,8 +65,16 @@
 
       a {
         color: @themeLighterColor;
+        border: 1px solid #333;
+        padding: 2px 4px;
+        border-radius: 3px;
+
+        &:hover {
+          color: #fff;
+          background-color: @themeLighterColor;
+        }
       }
-      
+
     }
 
   }
