--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -1,49 +1,58 @@
 @import "./base.less";
+
 body {
-    font: 14px/1.6 "Microsoft YaHei",Arial,"黑体","宋体",sans-serif;
-    color: #333;
-    margin: 0;
-  }
-  
-  html, body, #share {
-    height: 100%;
-  }
-  a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .el-button {
-    color: @themeColor;
-    border: 1px solid @themeLighterColor;
-    background: #fff;
-    border-radius: 4px;  
-  }
-  
-  .el-button.el-button--medium{
-    font-size: 13px;
-    padding: 0 8px;
-    font-weight: normal;
-    line-height: 28px;
-  }
-  
-  
-  .el-button:hover {
-    color: #fff;
-    background-color: @themeLighterColor;
-  }
-  
-  .el-input.is-active .el-input__inner, .el-input__inner:focus, .el-textarea__inner:focus {
-    border-color: @themeLighterColor;
-  }
+  font: 14px/1.6 "Microsoft YaHei", Arial, "黑体", "宋体", sans-serif;
+  color: #333;
+  margin: 0;
+}
 
-  .pagination{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
+html,
+body,
+#share {
+  height: 100%;
+}
 
-  .item{
-    border-bottom: 1px solid #f0f0f0;
-    padding-bottom: 15px;
-  }
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+.el-button {
+  color: @themeColor;
+  border: 1px solid @themeLighterColor;
+  background: #fff;
+  border-radius: 4px;
+}
+
+.el-button.el-button--medium {
+  font-size: 13px;
+  padding: 0 8px;
+  font-weight: normal;
+  line-height: 28px;
+}
+
+
+.el-button:hover {
+  color: #fff;
+  background-color: @themeLighterColor;
+}
+
+.el-input.is-active .el-input__inner,
+.el-input__inner:focus,
+.el-textarea__inner:focus {
+  border-color: @themeLighterColor;
+}
+
+.pagination {
+  // display: flex;
+  // justify-content: center;
+  // margin-bottom: 20px;
+  display: grid;
+  justify-items: center;
+  margin-bottom: 20px;
+}
+
+.item {
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 15px;
+}
